1_kubernetes/acmeair/acemair-mainservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-mainservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-main-deployment
  template:
    metadata:
      labels:
        name: acmeair-main-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-mainservice
        image: vasth/acmeair-mainservice:latest
        ports:
        - containerPort: 9080
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-main-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-main-deployment
