1_kubernetes/acmeair/acmeair-bookingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-bookingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-deployment
  template:
    metadata:
      labels:
        name: acmeair-booking-deployment
    spec:
      containers:
      - name: acmeair-bookingservice
        image: vasth/acmeair-bookingservice:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookingservice
  name: acmeair-booking-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-booking-deployment
---
##### Booking Database  #####
apiVersion: v1
kind: Service
metadata:
  labels:
    service: acmeair-booking-db
  name: acmeair-booking-db
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: acmeair-booking-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-booking-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-db
  template:
    metadata:
      labels:
        name: acmeair-booking-db
    spec:
      containers:
      - image: mongo
        name: acmeair-booking-db
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 200m
